# zhejiangforecast_zj

./: .gitignore  README.md  pyproject.toml  requirements.txt
airflow/dags/: online_modeling_pipeline.py
configs/: default.yml  example_ingest_wind_h3.json
docs/: architecture_mermaid_readme.md  backend_integration_guide.md  backend_powerdata_api_cases.md  ingest_api_guide.md  mlops_stage_api_guide.md  nmg_shuijinghu_solar_cleaning_test.md  nwp_read_performance.md  orm_database_design_plan.md  refactor_algorithm_engine.md  region_grid_ingest_guide.md  train_api_status_guide.md  ~$预测MLOps流程与现有方案小改版_语气调整无页眉页脚.docx  功率预测MLOps流程与现有方案小改版_语气调整无页眉页脚.docx
frontend/: README.md  design-qa.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  main.ts  router.ts  styles.css  types.ts  utils.ts
frontend/src/stores/: taskStore.ts
frontend/src/views/: WorkbenchView.vue
migrations/: env.py
migrations/versions/: 20260706_0001_initial_mlops_schema.py
scripts/: pg_smoke.py  prepare_nmg_shuijinghu_solar.py  run_backend_api_flow.py  run_h3_smoke.py  start_api_wsl.sh
src/zhejiangforecast_zj/: __init__.py  cli.py  schemas.py
src/zhejiangforecast_zj/adapters/: __init__.py  cleaning.py  deep_learning.py  external_projects.py  nwp.py
src/zhejiangforecast_zj/algorithm_engine/: __init__.py
src/zhejiangforecast_zj/api/: main.py
src/zhejiangforecast_zj/core/: __init__.py  config.py  (+6 more)
tests/: test_core_pipeline.py  test_mlops_api.py  test_nwp_feature_contract.py  test_region_grid.py  test_solar_cleaning.py  test_time_semantics.py
(+25 files in other folders)
