[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhejiangforecast-zj"
version = "0.1.0"
description = "FastAPI + PostgreSQL/SQLite online modeling pipeline for Zhejiang renewable power forecasting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "pydantic>=1.10",
  "joblib>=1.2",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.22"]
ml = ["scikit-learn>=1.2", "lightgbm>=4.0", "xgboost>=1.7"]
pg = ["psycopg[binary]>=3.1", "alembic>=1.13"]
nwp = ["xarray>=2023.1", "netCDF4>=1.6", "metpy>=1.5"]
excel = ["openpyxl>=3.1", "xlrd>=2.0"]
dl = ["torch>=2.0"]
airflow = ["apache-airflow>=2.7"]
dev = ["pytest>=7.0"]

[project.scripts]
zj-forecast = "zhejiangforecast_zj.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
